# CmakeTest

./: CMakeLists.txt  README.md  main.cpp
mymath/: CMakeLists.txt  mymath.cpp  mymath.h
